Header Store created!

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <section class="container-login">
         <h1 class="logo-title">Roux</h1>
         <h2 class="logo-subtitle">Building awesome sites</h2>
-        <form class="login-form">
+        <form class="login-form" action="store.html">
             <div class="text-wrapping">
-                <input class="input-form" type="email" placeholder="Email">
-                <input class="input-form" type="password" placeholder="Senha">
+                <input required class="input-form" type="email" placeholder="Email">
+                <input required class="input-form" type="password" placeholder="Senha">
             </div>
             <div class="link-button-wrapping">
                 <a class="forgot-pwd-link" href="#">esqueci a senha</a>
